ABC : feat:first edit

--- a/first.html
+++ b/first.html
@@ -9,7 +9,7 @@ span.small {
 <body>
 
 <p>This is some normal text.</p>
-<p><span class="small">This is some smaller text.</span></p>
+<p><span class="small">This is smaller text.</span></p>
 
 </body>
 </html> 
