ABC: final commit

--- a/first.html
+++ b/first.html
@@ -8,7 +8,7 @@ span.small {
 </head>
 <body>
 
-<p>This is some normal text.</p>
+<p>This is normal text.</p>
 <p><span class="small">This is smaller text.</span></p>
 
 </body>
