--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is Heading</h1>
+<p>This is paragraph.</p>
 
 </body>
 </html>
